prod-deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-prod
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      nodeSelector:
        nodepool: prod
      containers:
      - name: spring-boot
        image: belalkhozeim22/spring-boot-app-image:latest
        ports:
        - containerPort: 8080
