prod-deployment/service.yml

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: production
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
