prod-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example-spring-boot.com
    http:
      paths:
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app
            port:
              number: 8080
